$Id$

2018-10-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Rework main loop.

	smartctl.cpp, smartd.cpp, os_linux.cpp, os_solaris.cpp:
	Replace all uses of EXIT() macro.  Use early return where possible,
	use throw otherwise.
	utility.h: Remove EXIT() macro.

	utility.cpp: Detect more C++ language versions for -V option.

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 1100 SSDs: Rename,
	  BX500 (#1095)
	- Seagate Samsung SpinPoint F4 EG (AF) (#1090)
	- Seagate Momentus 5400.6: Add '-F xerrorlba' (#1094)
	- USB: JMicron JM562 (0x152d:0x0562) (IDENTIFY only, see #966)
	- USB: VIA VL715 (0x2109:0x0715) (#1098)

2018-10-09  Anthony D'Atri  <anthony.datri@gmail.com>

	drivedb.h: (#1096)
	- Samsung based SSDs: Samsung PM863a (#951, #952, #961, #962, #972)
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: Dell-flavor S3500

2018-10-09  Thomas Niedermeier  <tniedermeier@thomas-krenn.com>

	drivedb.h: Samsung PM883 and SM883 (GH pull/19)

2018-09-27  Christian Franke  <franke@computer.org>

	INSTALL: Update list of default ./configure options.

	utility.cpp: Add check of sg_get_unaligned_[bl]e16() and *32 to
	check_endianness().

	utility.cpp, utility.h: Optionally use C++11 'std::regex' instead of
	POSIX regex(3).
	configure.ac: Add option '--with-cxx11-regex'.

	utility.cpp, utility.h: Simplify 'class regular_expression', remove
	unneeded flag parameters, remove unused function.
	atacmds.cpp, knowndrives.cpp, os_win32.cpp, smartd.cpp: Adjust usage
	accordingly.

	configure.ac, utility.cpp, utility.h: Remove replacement for missing
	'strtoull()'.

	configure.ac: Change default for '--with-nvme-devicescan' to 'yes'
	on Linux and Windows.  Keep 'no' on FreeBSD, NetBSD and Darwin.

2018-09-26  Christian Franke  <franke@computer.org>

	configure.ac: Print warning if systemd(1) is present but
	libsystemd-dev package is missing.

	smartd.cpp: Notify READY=1 to systemd just before first sleep() to
	ensure that the signal handlers are set.
